[added]:  add interface choose by block height
1.

--- a/BlockChain_LoadBalance/LoadBalance/LoadBalance.csproj
+++ b/BlockChain_LoadBalance/LoadBalance/LoadBalance.csproj
@@ -16,4 +16,13 @@
     <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="chainconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
