--- a/BlockChain_LoadBalance/LoadBalance/log4net.config
+++ b/BlockChain_LoadBalance/LoadBalance/log4net.config
@@ -24,7 +24,7 @@
 
   <root>
     <level value="ALL" />
-    <appender-ref ref="UdpAppender" />
+    <appender-ref ref="ConsoleAppender" />
     <appender-ref ref="TraceAppender" />
   </root>
 </log4net>
