[added]: eth web socket subscription
1.

--- a/BlockChain_LoadBalance/LoadBalance/log4net.config
+++ b/BlockChain_LoadBalance/LoadBalance/log4net.config
@@ -23,7 +23,7 @@
   -->
 
   <root>
-    <level value="ALL" />
+    <level value="INFO" />
     <appender-ref ref="ConsoleAppender" />
     <appender-ref ref="TraceAppender" />
   </root>
