[added]: redis rpc cache
1.

--- a/BlockChain_LoadBalance/LoadBalance/appsettings.json
+++ b/BlockChain_LoadBalance/LoadBalance/appsettings.json
@@ -4,5 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RedisConn": "127.0.0.1",
+  "RedisCacheTimeOutInSecond" : "15" 
 }
