--- a/BlockChain_LoadBalance/LoadBalance/appsettings.json
+++ b/BlockChain_LoadBalance/LoadBalance/appsettings.json
@@ -6,5 +6,13 @@
   },
   "AllowedHosts": "*",
   "RedisConn": "127.0.0.1",
-  "RedisCacheTimeOutInSecond" : "15" 
+  "RedisCacheTimeOutInSecond": "15",
+
+  "NodeCheck": {
+    "ErrorThreshold" : 5 
+  } ,
+
+  "NodeChoose": {
+    "Choose": "NodeChooseByBlockHeight"
+  } 
 }
