[added]: add peer count
1.

--- a/BlockChain_LoadBalance/LoadBalance/chainconfig.json
+++ b/BlockChain_LoadBalance/LoadBalance/chainconfig.json
@@ -7,7 +7,7 @@
         {
           "Rpc": "http://127.0.0.1:8145",
           "Ws": "ws://127.0.0.1:8146",
-          "RpcApi": [ "Eth" ]
+          "RpcApi": [ "eth","net","admin" ]
         }
       ] 
     }
