--- a/BlockChain_LoadBalance/LoadBalance/appsettings.json
+++ b/BlockChain_LoadBalance/LoadBalance/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "RedisConn": "127.0.0.1",
+  "RedisConn": "redis",
   "RedisCacheTimeOutInSecond": "15",
 
   "NodeCheck": {
