--- a/BlockChain_LoadBalance/LoadBalance/log4net.config
+++ b/BlockChain_LoadBalance/LoadBalance/log4net.config
@@ -3,12 +3,12 @@
   <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
     
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %-5level %logger{1} - %message%newline" />
+      <conversionPattern value="%date{HH:mm:ss} %-5level %logger{1} - %message%newline" />
     </layout>
   </appender>
   <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %-5level %logger{1} - %message%newline" />
+      <conversionPattern value="%date{hhmm:ss} %-5level %logger{1} - %message%newline" />
     </layout>
   </appender>
   <!--
@@ -25,6 +25,5 @@
   <root>
     <level value="INFO" />
     <appender-ref ref="ConsoleAppender" />
-    <appender-ref ref="TraceAppender" />
   </root>
 </log4net>
