--- a/BlockChain_LoadBalance/LoadBalance/LoadBalance.csproj
+++ b/BlockChain_LoadBalance/LoadBalance/LoadBalance.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="Nethereum.Signer" Version="2.5.1" />
     <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
   </ItemGroup>
