--- a/BlockChain_LoadBalance/LoadBalance/LoadBalance.csproj
+++ b/BlockChain_LoadBalance/LoadBalance/LoadBalance.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="chainconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
