[added]: rpc request cache
1.

--- a/BlockChain_LoadBalance/LoadBalance/log4net.config
+++ b/BlockChain_LoadBalance/LoadBalance/log4net.config
@@ -23,7 +23,7 @@
   -->
 
   <root>
-    <level value="INFO" />
+    <level value="DEBUG" />
     <appender-ref ref="ConsoleAppender" />
   </root>
 </log4net>
