[added]: add auth
1.

--- a/BlockChain_LoadBalance/LoadBalance/appsettings.json
+++ b/BlockChain_LoadBalance/LoadBalance/appsettings.json
@@ -25,10 +25,16 @@
   } ,
 
   "Cache": {
-    "Eth_IrrevocableBlockCount": 36 
+    "Eth_IrrevocableBlockCount": 36
 
 
 
+  },
+
+  "Auth": {
+    //Auth.Type In Token , Ip , None
+    "Type": "None",
+    "AllowIp": "127.0.0.1|192.168.1.153"
   } 
 
 
